Fix mobile menu merging with title on firefox

--- a/assets/scss/components/nav-main.scss
+++ b/assets/scss/components/nav-main.scss
@@ -87,7 +87,7 @@
 
     &.-open {
       flex-direction: column;
-      height: fit-content;
+      height: auto;
 
       margin: $spacing-base;
       margin-bottom: 3rem;
